@@ -58,7 +58,7 @@ my $test_requires = {
 my $runtime_requires = {
   'Carp::Clan'               => '6.0',
   'Class::Accessor::Grouped' => '0.10002',
-  'Class::C3::Componentised' => '1.0005',
+  'Class::C3::Componentised' => '1.0008',
   'Class::Inspector'         => '1.24',
   'Config::Any'              => '0.20',
   'Context::Preserve'        => '0.01',
