@@ -69,11 +69,9 @@ that are loaded first are the first ones in the inheritance stack.  So, if
 you override insert() but the DBIx::Class::Row component is loaded first
 then your insert() will never be called, since the DBIx::Class::Row insert()
 will be called first.  If you are unsure as to why a given method is not
-being called try printing out the Class::C3 inheritance stack.
+being called try printing out the current linearized MRO.
 
-  print join ', ' => Class::C3::calculateMRO('YourClass::Name');
-
-Check out the L<Class::C3> docs for more information about inheritance.
+  print join ', ' => mro::get_linear_isa('YourClass::Name');
 
 =head1 EXISTING COMPONENTS
 
