@@ -2,10 +2,9 @@ use warnings;
 use strict;
 
 use Test::More;
-use MRO::Compat;
 
 use lib qw(t/lib);
-use DBICTest; # do not remove even though it is not used
+use DBICTest; # do not remove even though it is not used (pulls in MRO::Compat if needed)
 
 {
   package AAA;
@@ -38,7 +37,6 @@ eval { mro::get_linear_isa('CCC'); };
 ok (! $@, "Correctly skipped injecting an indirect parent of class BBB");
 
 use DBIx::Class::Storage::DBI::Sybase::Microsoft_SQL_Server;
-use B;
 
 is_deeply (
   mro::get_linear_isa('DBIx::Class::Storage::DBI::Sybase::Microsoft_SQL_Server'),
@@ -58,11 +56,20 @@ is_deeply (
   'Correctly ordered ISA of DBIx::Class::Storage::DBI::Sybase::Microsoft_SQL_Server'
 );
 
-my $dialect_ref = DBIx::Class::Storage::DBI::Sybase::Microsoft_SQL_Server->can('sql_limit_dialect');
+my $storage = DBIx::Class::Storage::DBI::Sybase::Microsoft_SQL_Server->new;
+$storage->_determine_driver;
 is (
-  B::svref_2object($dialect_ref)->GV->STASH->NAME,
-  'DBIx::Class::Storage::DBI::MSSQL',
+  $storage->can('sql_limit_dialect'),
+  'DBIx::Class::Storage::DBI::MSSQL'->can('sql_limit_dialect'),
   'Correct method picked'
 );
+
+if ($] >= 5.010) {
+  ok (! $INC{'Class/C3.pm'}, 'No Class::C3 loaded on perl 5.10+');
+
+  # Class::C3::Componentised loads MRO::Compat unconditionally to satisfy
+  # the assumption that once Class::C3::X is loaded, so is Class::C3
+  #ok (! $INC{'MRO/Compat.pm'}, 'No MRO::Compat loaded on perl 5.10+');
+}
 
 done_testing;
