@@ -9,6 +9,7 @@ Revision history for DBIx::Class
           plain ::Storage::DBI
 
     * Fixes
+        - Fix ::Storage::DBI::* MRO problems on 5.8.x perls
         - Disable mysql_auto_reconnect for MySQL - depending on the ENV
           it sometimes defaults to on and causes major borkage on older
           DBD::mysql versions
@@ -20,6 +21,9 @@ Revision history for DBIx::Class
           when deploying a schema via sql file
         - Fix reverse_relationship_info on prototypical result sources
           (sources not yet registered with a schema)
+
+    * Misc
+        - Only load Class::C3 and friends if necessary ($] < 5.010)
 
 0.08127 2011-01-19 16:40 (UTC)
     * New Features / Changes
